打包路径问题

--- a/vue 打包路径问题/vue-cli background.html
+++ b/vue 打包路径问题/vue-cli background.html
@@ -45,6 +45,9 @@
         <img src="img6.jpg" alt="">
         <p>4、添加scss执行语法</p>
         <img src="img7.jpg" alt="">
+        <p>5、rem字体转换 </p>
+        <img src="img9.jpg" alt="">
+        <img src="img8.jpg" alt="">
     </div>
 </body>
 </html>
