修改压缩插件

--- a/web-gulp/src/index.html
+++ b/web-gulp/src/index.html
@@ -20,7 +20,7 @@
     <div id="main">
       <img src="./static/images/gulp.png" />
       <div class="flow">111</div>
-      
+      <a href="./views/index/cart.html">cart</a>
     </div>
   </body>
   <script src="./static/js/main.js"></script>
